--- a/fig/fig_ConvNat_Acou/tex/fig_Acou_CHXout_V1V2_Mid.tex
+++ b/fig/fig_ConvNat_Acou/tex/fig_Acou_CHXout_V1V2_Mid.tex
@@ -8,7 +8,7 @@
     grid style={line width=.1pt, draw=gray!10},
     major grid style={line width=.2pt,draw=gray!50},
     xlabel={Temps $t$ [\unit{\s}]},
-    ylabel={\'Ecart de température $\tau$ [\unit{\degreeCelsius}]},
+    ylabel={\'Ecart de température $\theta$ [\unit{\degreeCelsius}]},
     xmin=0,xmax=3500,
 	 ymin=-20,ymax=5,
     xtick={0,600,1200,1800,2400,3000,3500},%ytick={0,9.1120/100000,1.4452/10000,2.5/10000,5/10000,1/1000},
