--- a/tex/IndexNotations.tex
+++ b/tex/IndexNotations.tex
@@ -1,7 +1,7 @@
 \chapter{Index des notations}\label{chap:IndexNotations}%\addcontentsline{toc}{chapter}{\nameref{chap:IndexNotations}}
 
 \begin{center}
-    \begin{longtable}{p{.1\textwidth} p{.1\textwidth} p{.65\textwidth}}
+    \begin{longtable}{p{.1\textwidth} p{.1\textwidth} p{.7\textwidth}}
 %    	\hline
         \multicolumn{3}{c}{Lettres latines}  \\\hline
         \textbf{Symbole} & \textbf{Unité} & \textbf{Définition} \\\hline\hline \endfirsthead
@@ -12,66 +12,66 @@
 		\multicolumn{3}{r}{Continué sur la page suivante...} \endfoot
         \hline \endlastfoot
         $c_0$ & \unit{\meter\per\second} & Célérité du son dans le milieu \\
-        $C_p$ &  & Capacité calorifique du gaz à pression constante \\
-        $C_s$ &  & Capacité calorifique du solide poreux \\
-        $C_v$ &  & Capacité calorifique du gaz à volume constant \\
-        $\COP$ &  & Coefficient de performance, $\COP=\frac{Q_f}{W_e}$ \\
-        $\COP_{\sf carnot}$ &  & Coefficient de performance de Carnot, $\COP_{\sf carnot} = \frac{T_f}{T_c-T_f}$ \\
-        $DR$ &  & \textit{Drive ratio}, $DR=\frac{p}{p_0}$\\
-        $\mathbf{g}$ &  & Accélération terrestre, $\mathbf{g}=\qty{9.81}{\meter\per\second\squared}$ \\
-        $g$ &  & Gain thermoacoustique \\
-        $\Grashof$ &  & Nombre de Grashof \\
-        $k_0$ &  & Nombre d'onde sans perte \\
-        $k$ &  & Conductivité thermique \\
-        $K_p$ &  & Perméabilité hydraulique d'un matériau poreux \\
-        $L_{\sf reg}$ &  & Longueur du régénérateur, $L_{\sf reg}=\qty{39}{\milli\meter}$ \\
-        $\Nusselt$ &  & Nombre de Nusselt \\
-        $p_0$ &  & Pression statique dans le réfrigérateur \\
-        $p_1$ &  & Pression acoustique \\
-        $\Peclet$ &  & Nombre de Péclet \\
-        $\Prandtl$ &  & Nombre de Prandtl \\
-        $\mathbf{e}_r$ &  & Vecteur unitaire transverse du noyau \\
-        $R_{\sf reg}$ &  & Rayon du régénérateur, $R_{\sf reg}=\qty{74}{\milli\meter}$ \\
-        $\Rayleigh$ &  & Nombre de Rayleigh \\
-        $r_h$ &  & Rayon hydraulique des pores du régénérateur \\
-        $T_0$ &  & Température moyenne locale du gaz dans le noyau \\
-        $T_\infty$ &  & Température ambiante hors de la machine \\
-        $u$ &  & Débit acoustique \\
-        $v$ &  & Vitesse acoustique \\
-        $W_e$ &  & Puissance électrique consommée par les sources acoustiques \\
+        $C_p$ & \unit{\joule\per\kelvin} & Capacité thermique isobare du gaz \\
+        $C_s$ & \unit{\joule\per\kelvin} & Capacité thermique du solide poreux \\
+        $C_v$ & \unit{\joule\per\kelvin} & Capacité thermique isochore du gaz \\
+        $\COP$ & --- & Coefficient de performance, $\COP=\frac{Q_f}{W_e}$ \\
+        $\COP_{\sf carnot}$ & --- & Coefficient de performance de Carnot, $\COP_{\sf carnot} = \frac{T_f}{T_c-T_f}$ \\
+        $DR$ & \unit{\percent} & \textit{Drive ratio}, $DR=\frac{p_1}{p_0}$\\
+        $\mathbf{g}$ & \unit{\meter\per\square\second} & Accélération terrestre, $\mathbf{g}=-g \mathbf e_{z,0}$ avec $g=\qty{9.81}{\meter\per\second\squared}$ \\
+        $G$ & \echaf{?/m} & Gain thermoacoustique unitaire \\
+        $\Grashof$ & --- & Nombre de Grashof \\
+        $k_0$ & \unit{\radian\per\meter} & Nombre d'onde sans perte \\
+        $k$ & \unit{\joule\per\meter\per\kelvin} & Conductivité thermique \\
+        $K_p$ & \unit{\meter\squared} & Perméabilité hydraulique d'un matériau poreux \\
+        $L_{\sf reg}$ & \unit{\meter} & Longueur du régénérateur, $L_{\sf reg}=\qty{39}{\milli\meter}$ \\
+        $\Nusselt$ & --- & Nombre de Nusselt \\
+        $p_0$ & \unit{\pascal} & Pression statique dans le réfrigérateur \\
+        $p_1$ & \unit{\pascal} & Pression acoustique \\
+        $\Peclet$ & --- & Nombre de Péclet \\
+        $\Prandtl$ & --- & Nombre de Prandtl \\
+        $\mathbf{e}_r$ & \echaf{---} & Vecteur unitaire transverse du noyau \\
+        $R_{\sf reg}$ & \unit{\meter} & Rayon du régénérateur, $R_{\sf reg}=\qty{74}{\milli\meter}$ \\
+        $\Rayleigh$ & --- & Nombre de Rayleigh \\
+        $r_h$ & \unit{\meter} & Rayon hydraulique des pores du régénérateur \\
+        $T_0$ & \unit{\kelvin} & Température moyenne locale du gaz dans le noyau \\
+        $T_\infty$ & \unit{\kelvin} & Température ambiante hors de la machine \\
+        $u$ & \unit{\cubic\meter\per\second} & Débit acoustique \\
+        $v$ & \unit{\meter\per\second} & Vitesse acoustique \\
+        $W_e$ & \unit{\watt} & Puissance électrique consommée par les sources acoustiques \\
         $\mathbf{e}_x$ &  & Vecteur unitaire axial du noyau \\
-        $\mathbf e_{x0}$ &  & \echaf{définir} \\
-        $Q_c$ &  & Flux de chaleur extrait par l'eau circulant dans l'échangeur ambiant \\
-        $Q_f$ &  & Flux de chaleur apporté par les résistances chauffantes dans l'échangeur froid\\
+        $\mathbf e_{x0}$ & \echaf{---} & \echaf{définir} \\
+        $Q_c$ & \unit{\watt} & Flux de chaleur extrait par l'eau circulant dans l'échangeur ambiant \\
+        $Q_f$ & \unit{\watt} & Flux de chaleur apporté par les résistances chauffantes dans l'échangeur froid\\
     \end{longtable}
 
 \bigskip
 
-    \begin{longtable}{p{.15\textwidth} p{.75\textwidth}}
+    \begin{longtable}{p{.1\textwidth} p{.1\textwidth} p{.7\textwidth}}
 %    	\hline
-        \multicolumn{2}{c}{Lettres grecques \textcolor{red}{ordre alphabétique ?}}  \\\hline
-        \textbf{Symbole} & \textbf{Définition} \\\hline\hline
-        $\psi_v$ & Rotation de l'axe de symétrie du réfrigérateur par rapport à l'axe horizontal\\
-        $\psi_h$ & Rotation autour de l'axe de symétrie du réfrigérateur \\
-        $\varphi_{2-1}$ & Déphasage entre les sources acoustiques, $\varphi_{1-2} = \varphi_2 - \varphi_1$\\
-        $\Phi$ & Porosité du régénérateur \\
-        $\rho_0$ & Masse volumique moyenne du gaz \\
-        $\rho_{s}$ & Masse volumique du solide poreux\\
-        $\delta_{\kappa,\nu}$ & Couche limites thermique/visqueuse \\
-        $\theta$ & Différence entre les températures locale dans le réfrigérateur et initiale, $\theta=T_0-T_\infty$\\
-        $\mu$ & Viscosité dynamique \\
-        $\nu$ & Viscosité cinématique \\
-        $\kappa$ & Diffusivité thermique \\
-        $\tau_0$ & Période du signal $\tau_0 = 1/f_0$ \\
-        $\xi_0$ & Déplacement particulaire dans le régénérateur \\
-        $\xi_1$ & Déplacement du piston de la source acoustique principale \\
-        $\xi_2$ & Déplacement du piston de la source acoustique secondaire \\
-        $\lambda$ & Longueur d'onde du signal acoustique \\\hline
+        \multicolumn{3}{c}{Lettres grecques \textcolor{red}{ordre alphabétique ?}}  \\\hline
+        \textbf{Symbole} & \textbf{Unité} & \textbf{Définition} \\\hline\hline
+        $\psi_v$ & \unit{\degree} & Rotation de l'axe de symétrie du réfrigérateur par rapport à l'axe horizontal\\
+        $\psi_h$ & \unit{\degree} & Rotation autour de l'axe de symétrie du réfrigérateur \\
+        $\varphi_{2-1}$ & \unit{\degree} & Déphasage entre les sources acoustiques, $\varphi_{1-2} = \varphi_2 - \varphi_1$\\
+        $\Phi$ & \unit{\percent} & Porosité du régénérateur \\
+        $\rho_0$ & \unit{\kilo\gram\per\cubic\meter} & Masse volumique moyenne du gaz \\
+        $\rho_{s}$ & \unit{\kilo\gram\per\cubic\meter} & Masse volumique du solide poreux\\
+        $\delta_{\kappa,\nu}$ & \unit{\meter} & Couche limites thermique/visqueuse \\
+        $\theta$ & \unit{\kelvin} & Différence entre les températures locale dans le réfrigérateur et initiale, $\theta=T_0-T_\infty$\\
+        $\mu$ & \unit{\pascal\second} & Viscosité dynamique \\
+        $\nu$ & \unit{\square\meter\per\second} & Viscosité cinématique \\
+        $\kappa$ & \unit{\square\meter\per\second} & Diffusivité thermique \\
+        $\tau_0$ & \unit{\second} & Période du signal $\tau_0 = 1/f_0$ \\
+        $\xi_0$ &  & Déplacement particulaire dans le régénérateur \\
+        $\xi_1$ &  & Déplacement du piston de la source acoustique principale \\
+        $\xi_2$ &  & Déplacement du piston de la source acoustique secondaire \\
+        $\lambda$ &  & Longueur d'onde du signal acoustique \\\hline
     \end{longtable}
 
 \bigskip
 
-    \begin{longtable}{p{.15\textwidth} p{.75\textwidth}}
+    \begin{longtable}{p{.1\textwidth} p{.8\textwidth}}
 %		\hline
         \multicolumn{2}{c}{Indices et exposants}  \\\hline
         \textbf{Symbole} & \textbf{Définition} \\\hline\hline \endfirsthead
