--- a/fig/fig_ConvNat_HeatOnly/tex/fig_HeatOnly_CHXout_H1H2.tex
+++ b/fig/fig_ConvNat_HeatOnly/tex/fig_HeatOnly_CHXout_H1H2.tex
@@ -8,7 +8,7 @@
     grid style={line width=.1pt, draw=gray!10},
     major grid style={line width=.2pt,draw=gray!50},
     xlabel={Temps $t$ [\unit{\s}]},
-    ylabel={\'Ecart de température $T-T_i$ [\unit{\degreeCelsius}]},
+    ylabel={\'Ecart de température $\theta$ [\unit{\degreeCelsius}]},
     xmin=0,xmax=3500,
 	ymin=-5,ymax=50,
     xtick={0,600,...,3000,3500},%ytick={0,9.1120/100000,1.4452/10000,2.5/10000,5/10000,1/1000},
