--- a/tex/EtudeExperimentale.tex
+++ b/tex/EtudeExperimentale.tex
@@ -47,7 +47,7 @@ Dans cette étude, les quatre orientations définies sur les figures~\ref{fig:Or
 		\caption{}
 		\label{fig:PerfConvNat_COP}
 	\end{subfigure}	     
-    \caption{Influence de la convection naturelle sur les performances sur différents indicateur : \subref{fig:PerfConvNat_Tf} température froide $T_f$, \subref{fig:PerfConvNat_Ta} température ambiante~$T_a$, \subref{fig:PerfConvNat_Qa} quantité de chaleur extraite du côté ambiant $\dot Q_a$, et \subref{fig:PerfConvNat_COP} le coefficient de performance rapporté à Carnot. Les couleurs indiquent l'orientation ; le remplissage, si le résultat est obtenu expérimentalement ou par une simulation \textsc{DeltaEC} ; la forme du marqueur, la puissance thermique fournie à l'échangeur froid $Q_f$.\echaf{ajouter valeurs DeltaEC}}
+    \caption{Influence de la convection naturelle sur les performances sur différents indicateur : \subref{fig:PerfConvNat_Tf} température froide $T_f$, \subref{fig:PerfConvNat_Ta} température ambiante~$T_a$, \subref{fig:PerfConvNat_Qa} quantité de chaleur extraite du côté ambiant $\dot Q_a$, et \subref{fig:PerfConvNat_COP} le coefficient de performance rapporté à Carnot. Les couleurs indiquent l'orientation ; le remplissage, si le résultat est obtenu expérimentalement ou par une simulation \textsc{DeltaEC} ; la forme du marqueur, la puissance thermique fournie à l'échangeur froid $Q_f$.\echaf{ajouter valeurs DeltaEC + vérifier si c'est 0beg ou non}}
     \label{fig:PerfConvNat}
 \end{figure}
 
