--- a/tex/EtudeExperimentale.tex
+++ b/tex/EtudeExperimentale.tex
@@ -1,4 +1,4 @@
-\chapter{\'Etude experimentale}\label{chap:EtudeExpe}
+\chapter{Résultats expérimentaux et comparaison aux simulations}\label{chap:EtudeExpe}
 \mylocaltoc
 
 \section{Convection naturelle}\label{chap:EtudeExpe_ConvNat}
