Chap 1 intro légerement rempli

--- a/fig/fig_OrientationCore/tex/subfig_OrientationCoreH2.tex
+++ b/fig/fig_OrientationCore/tex/subfig_OrientationCoreH2.tex
@@ -19,6 +19,7 @@
 	\def\decalage{\R/2-\L/2};
 	
 %	\draw[opacity=0] (\decalage,0) rectangle ++(-\HX,\R); %%% Pour l'alignement vertical
+%\draw{[white](\L/2,0) -- ++(0,\R);
 	
 	\begin{scope}[xslant=1,yscale=.5]
 		
