--- a/fig/fig_WavesInDuctPiece/tex/fig_WavesInDuctPiece.tex
+++ b/fig/fig_WavesInDuctPiece/tex/fig_WavesInDuctPiece.tex
@@ -7,8 +7,8 @@
     \def\xdist{9cm};
     
     \fill[black!20] (\xone,\height) rectangle (\xtwo,0);
-    \draw[dashed] (\xone,\height) -- ++(0,-1.3*\height) node[below]{$x_1$};
-    \draw[dashed] (\xtwo,\height) -- ++(0,-1.3*\height)node[below]{$x_2$};
+    \draw[dashed] (\xone,\height) node[above] {$p_e,~u_e$} -- ++(0,-1.3*\height) node (x1) [below]{$x_1$};
+    \draw[dashed] (\xtwo,\height) node[above]{$p_s,~u_s$} -- ++(0,-1.3*\height)node (x2) [below]{$x_2$};
     
     \draw[very thick,dashed] (-.1*\length,0) -- ++(.1*\length,0) coordinate(a1);
     \draw[very thick] (a1) -- ++(\length,0) coordinate(b1);
@@ -17,10 +17,17 @@
     \draw[very thick] (a2) -- ++(\length,0) coordinate(b2);
     \draw[very thick,dashed] (b2) -- ++(.1*\length,0);  
     
-    \draw[<-] (\xone-.1,\height/2) -- ++(-\arrow,0) node[left]{\shortstack{$p_e$\\$u_e$}};
-    \draw[->] (\xtwo+.1,\height/2) -- ++(+\arrow,0) node[right]{\shortstack{$p_s$\\$u_s$}};
+%    \draw[<-] (\xone-.1,\height/2) -- ++(-\arrow,0) node[midway]{\shortstack{$p_e$\\$u_e$}};
+%    \draw[->] (\xtwo+.1,\height/2) -- ++(+\arrow,0) node[midway]{\shortstack{$p_s$\\$u_s$}};
+
+	\draw[<-] (\xone-.1,\height/3) -- ++(-\arrow,0) node[near end, below]{$p_e^+$};
+    \draw[->] (\xtwo+.1,\height/3) -- ++(+\arrow,0) node[near end, below]{$p_s^+$};
+    \draw[->] (\xone-.1,2*\height/3) -- ++(-\arrow,0) node[near end, above]{$p_e^-$};
+    \draw[<-] (\xtwo+.1,2*\height/3) -- ++(+\arrow,0) node[near end, above]{$p_s^-$};
     
-    \draw[->] (-.2*\length,-.2*\height) --   ++(1.4*\length,0) node[above]{$x$};
+    \draw[->] (-.2*\length,-.2*\height) --   ++(1.4*\length,0) node[right]{$x$};
+    
+    \draw[<->] (x1.east) -- (x2.west) node[midway, fill=white] {$L$};
     
 %    \draw (a2) node[above]{\bf (a)};
     
