--- a/bib/phd_bib.bib
+++ b/bib/phd_bib.bib
@@ -1,4 +1,21 @@
 
+@article{baltean_gravity_2025,
+	title = {Gravity effects in a compact thermoacoustic cavity},
+	volume = {157},
+	issn = {0001-4966, 1520-8524},
+	url = {https://pubs.aip.org/jasa/article/157/2/833/3334199/Gravity-effects-in-a-compact-thermoacoustic-cavity},
+	doi = {10.1121/10.0035581},
+	abstract = {A numerical study of the thermoacoustic heat pumping effect inside a stack of parallel solid plates placed in a compact cavity is undertaken, for the purpose of determining how gravity modifies the temperature and flow fields and therefore the performance of the thermoacoustic energy conversion. To address the gravity effects, a configuration with at least two dimensions is required, thus enlarging the one-dimensional models commonly used in the field of thermoacoustics. The numerical model is based on the low Mach-number approximation of compressible Navier-Stokes equations coupled with flow rate inlets in order to account for the acoustic sources. The influence of gravity is highlighted and identified as a buoyancy effect driven by horizontal temperature gradients inside the stack and more generally inside the cavity. Gravity effects on thermoacoustic heat pumping are quantified when inclining the device and increasing the input acoustic power. These effects induce a decrease in the coefficient of performance, which is more noticeable when the drive ratio is smaller and when the gravity force is perpendicular to the plates.},
+	pages = {833--844},
+	number = {2},
+	journaltitle = {The Journal of the Acoustical Society of America},
+	author = {Baltean-Carlès, Diana and Fraigneau, Yann and Weisman, Catherine},
+	urldate = {2025-02-07},
+	date = {2025-02-01},
+	langid = {english},
+	file = {Baltean-Carlès et al. - 2025 - Gravity effects in a compact thermoacoustic cavity.pdf:C\:\\Users\\mfontbon\\Desktop\\sDrive\\Zotero\\storage\\U8HZJPEQ\\Baltean-Carlès et al. - 2025 - Gravity effects in a compact thermoacoustic cavity.pdf:application/pdf},
+}
+
 @article{li_effective_2006,
 	title = {The effective thermal conductivity of wire screen},
 	volume = {49},
