--- a/tex/Introduction.tex
+++ b/tex/Introduction.tex
@@ -282,6 +282,7 @@ Ainsi, les systèmes électro-mécano-acoustiques comme les haut-parleurs ou les
 %\end{figure}
 
 {
+\setlength{\extrarowheight}{7pt}
   \tikzsetfigurename{fig_AnalogiesElectroac}
 \paragraph{Analogies électro-mécaniques}
 \echaf{blabla}
@@ -300,9 +301,9 @@ Ainsi, les systèmes électro-mécano-acoustiques comme les haut-parleurs ou les
 	\hline
 %	\multicolumn{3}{|c|}{Domaines} \\\hline
 	Acoustique & Mécanique & \'Electrique \\ \hline\hline
-	\tikz{\draw(0,0) -- ++(1,0);\draw(0,.5) -- ++(1,0);} & \tikz{\draw(0,0) -- ++(1,0);\draw(0,.5) -- ++(1,0);} & \tikz{\draw(0,0) -- ++(1,0);\draw(0,.5) -- ++(1,0);} \\
-	\tikz{\draw(0,0) -- ++(1,0);\draw(0,.5) -- ++(1,0);} & \tikz{\draw(0,0) -- ++(1,0);\draw(0,.5) -- ++(1,0);} & \tikz{\draw(0,0) -- ++(1,0);\draw(0,.5) -- ++(1,0);} \\
-	\tikz{\draw(0,0) -- ++(1,0);\draw(0,.5) -- ++(1,0);} & \tikz{\draw(0,0) -- ++(1,0);\draw(0,.5) -- ++(1,0);} & \tikz{\draw(0,0) -- ++(1,0);\draw(0,.5) -- ++(1,0);} \\
+	\tikz{\draw(0,0) -- ++(1,0);\draw(0,.5) -- ++(1,0);} & \tikz{\draw(0,0) -- ++(1,0);\draw(0,.5) -- ++(1,0);} & \myctikz{\draw(0,0) to[L] ++(2,0);} \\
+	\tikz{\draw(0,0) -- ++(1,0) -- ++(0,.5) -- ++(-1,0);} & \tikz{\draw(0,0) -- ++(1,0);\draw(0,.5) -- ++(1,0);} & \myctikz{\draw(0,0) to[C] ++(2,0);} \\
+	\tikz{\fill[pattern={horizontal lines}](0,0) rectangle ++(1,.5);} & \tikz{\draw(0,0) -- ++(1,0);\draw(0,.5) -- ++(1,0);} & \myctikz{\draw(0,0) to[R] ++(2,0);} \\
 	\hline
 	
 	\end{tabular}
