Chapitre Comsol + abstract Fr rempli

--- a/tex/Abstract.tex
+++ b/tex/Abstract.tex
@@ -1,15 +1,21 @@
 {
-\scriptsize
+%\scriptsize
 
 \vfill
 
 {\Large Résumé :}\medskip
 
-en Français
+La thermoacoustique est un domaine interdisciplinaire à l'interface entre les transferts thermiques, la mécanique des fluides et l'acoustique. Elle concerne l'étude des interactions entre les ondes acoustiques et les variations de température. Dans cette thèse portant sur un réfrigérateur thermoacoustique, l'accent est mis sur l'impact de la convection naturelle sur la distribution de température complexe au sein de son noyau.
+
+En effet, la convection naturelle est un phénomène où un transfert de chaleur et un mouvement de fluide est provoqué par des variations de densité causée par des différences de température. Cet écoulement et ces transferts thermiques peuvent influer sur les performances de la machine et  perturber la distribution de température déjà complexe dans un noyau thermoacoustique.
+
+L'objectif principal de cette thèse expérimentale est d'analyser et de quantifier l'effet de la convection naturelle sur cette distribution de température. Une approche combinant simulations numériques et expérimentations est adoptée pour étudier les mécanismes sous-jacents régissant les transferts thermiques dans le noyau, en tournant le réfrigérateur et son noyau dans diverses orientations d'intérêt. Un modèle théorique temporel du régime transitoire est également développé pour prédire le comportement du système et ainsi améliorer la compréhension de la machine. Il est démontré que \echaf{ajouter les conclusions}.
+
+Un espace dans la littérature portant sur la thermoacoustique est comblé par cette étude de l'impact de la convection naturelle sur la distribution de température dans le noyau du réfrigérateur thermoacoustique.
 
 \bigskip
 
-{\large \textit{Mots clés :}} thermoacoustique,  distribution de température, conduction thermique, convection naturelle,.
+{\large \textit{Mots clés :}} thermoacoustique,  distribution de température, convection naturelle, conduction thermique, étude expérimentale, simulations numériques, modèles théoriques.
 
 \vfill
 
